# job-hunter-agent

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  tools.py
app/: main.py
app/crew/: crew.py  schemas.py  steps.py  tools.py
app/crew/config/: agents.yaml  tasks.yaml
app/routers/: crew.py  steps.py
app/utils/: pdf.py
config/: tasks_en.yaml
docs/: API.md  Project.md
